# demo_chat_PyQT_socket_Hash-Based-MAC

./: .tool-versions  README.md  db_server.db3  launcher_macos.py  launcher_new.py  pyproject.toml  server_database.db3  server_test_database.db3
client/: asdf.key  client.py  client_database.py  db_client_new.db3  db_client_qwer.db3  db_client_test1.db3  new.key  pyproject.toml  qwer.key  rewq.key  test.key  test1.key  test2.key  transport.py
db/: client_one.db3  server_db.db3
docs/: .buildinfo  README.html  client.cli.html  client.core.html  client.db_client.html  (+17 more)
messenger/: 123.key  client_db_test_client.db3  decos.py  launcher_macos.py  new_1.key  new_2.key  pyproject.toml  server+++.ini  server.py  server_base.db3
messenger/client/: client_database.py  main_window.py
messenger/common/: decos.py  utils.py
messenger/server/: add_user.py  core.py  main_window.py  server_database.py
messenger/server/database/: __init__.py  database.py  models.py  storage.py  tempCodeRunnerFile.py
messenger/server/database/_models/: contacts.py  history.py  users.py
messenger/server/tests/: conftest.py  database_test.py  tempCodeRunnerFile.py
messenger/unit_tests/: test_client.py  test_server.py  test_utils.py
server/: db_server.db3  pyproject.toml  server.py
server/common/: decos.py  utils.py
server/core/: core.py  decos.py  utils.py
server/database/: database.py  storage.py
server/db/: models.py  storage.py
server/db_server/: database.py  db_server.db3
server/gui/: add_user.py  main_window.py  remove_user.py
server/tests/: conftest.py  database_test.py
(+45 files in other folders)
