[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Viktor Simon <V-U-Simon@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "^5.15.10"
sqlalchemy = "^2.0.23"
pycryptodome = "^3.19.0"
pycryptodomex = "^3.19.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
